# seel

./: .gitignore  Anchor.toml  Cargo.toml  README.md  USECASE.md  vercel.json
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: cron.ts  index.ts  session.d.ts  snarkjs.d.ts
backend/src/modules/: auth.ts  income.ts  payment.ts  proof.ts  solana.ts
circuits/income_proof/: Nargo.toml  Prover.toml  gen_proof.mjs
circuits/income_proof/src/: main.nr
circuits/income_proof_circom/: check_vk_bytes.js  extract_vk.js  income_proof.circom  income_proof.r1cs  income_proof.sym  income_proof_0000.zkey  income_proof_final.zkey  package-lock.json  package.json  pot12_0001.ptau  sim_verify.js
circuits/income_proof_circom/income_proof_js/: income_proof.wasm
circuits/income_proof_sp1/: Cargo.toml
circuits/income_proof_sp1/elf/: riscv32im-succinct-zkvm-elf
circuits/income_proof_sp1/src/: main.rs
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/stripe/callback/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/launch/: page.tsx
frontend/components/: AttestationDashboard.tsx  LaunchSection.tsx  LaunchWizard.tsx  OAuthConnect.tsx  ProofGenerator.tsx  WalletConnect.tsx  WalletContextProvider.tsx  WalletSelector.tsx
frontend/public/circuits/: verification_key.json
programs/seel/: Cargo.toml
programs/seel/src/: lib.rs
sdk/: package-lock.json  package.json
sdk/src/: index.ts  kamino.ts  save.ts  types.ts
